# BiAlign-T2I

./: .gitignore  README.md  blip_finetune_coco.py  blip_inference_test.py  clip_finetune_coco.py  final_consistency_checker.py  pyproject.toml  requirements.txt  test.py  test_finetuned_blip.py  train.py
.github/workflows/: ci.yml
clip_finetuned_correct/: config.json
docs/: usage.md
examples/: evaluate_example.py  run_demo.py  run_example.py
notebooks/: demo_evaluation.ipynb
src/consistency/: __init__.py  cli.py
src/consistency/attention/: __init__.py  saliency.py
src/consistency/clip/: __init__.py  clip_scorer.py
src/consistency/detector/: __init__.py  wrapper.py
src/consistency/eval/: __init__.py  metrics.py  runner.py
src/consistency/regions/: __init__.py  region_scorer.py
src/consistency/score/: __init__.py  combine.py
src/consistency/visualize/: __init__.py  overlay.py  report.py
tests/: test_attention.py  test_cli.py  test_clip.py  test_composite.py  test_data.py  test_data_streaming.py  test_demo.py  test_detector.py  test_eval_runner.py  test_region_scorer.py  test_visualize.py
